fixes for antora

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -2,4 +2,6 @@ image::risc-v_logo.svg[]
 
 == RISC-V Capacity and Bandwidth QoS Register Interface
 
+RISC-V CBQRI Task Group
+
 Version v1.0, 2024-07-02: Ratified
