--- a/qos_header.adoc
+++ b/qos_header.adoc
@@ -40,21 +40,7 @@ endif::[]
 RISC-V CBQRI Task Group
 
 // Preamble
-[WARNING]
-.This document is in the link:http://riscv.org/spec-state[Ratified state]
-====
-No changes are allowed. Any desired or needed changes can be the subject of a
-follow-on new extension. Ratified extensions are never revised.
-====
-
-[preface]
-== Copyright and license information
-This specification is licensed under the Creative Commons
-Attribution 4.0 International License (CC-BY 4.0). The full
-license text is available at
-https://creativecommons.org/licenses/by/4.0/.
-
-Copyright 2024 by RISC-V International.
+include::qos_preamble.adoc[]
 
 [preface]
 include::qos_contributors.adoc[]
