--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -5,3 +5,10 @@ image::risc-v_logo.svg[]
 RISC-V CBQRI Task Group
 
 Version v1.0, 2024-07-02: Ratified
+
+[WARNING]
+.This document is in the link:http://riscv.org/spec-state[Ratified state]
+====
+No changes are allowed. Any desired or needed changes can be the subject of a
+follow-on new extension. Ratified extensions are never revised.
+====
